networking/routes/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
  hostnames:
    - "argocd.bkgdsvc.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
